Hard mode added

--- a/HTML/Hard.html
+++ b/HTML/Hard.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>STAR BLASTER</title>
     <link rel="stylesheet" href="../CSS/style.css" />
-    <script defer src="../JS/script.js"></script>
+    <script defer src="../JS/script2.js"></script>
   </head>
-
   <body>
     <div class="canvasContainer">
       <canvas id="myCanvas">
