--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>STAR BLASTER</title>
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <script defer="" src="../JS/script.js"></script>
-    <script defer="" src="../JS/script2.js"></script>
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <script defer="" src="./JS/script.js"></script>
+    <script defer="" src="./JS/script2.js"></script>
   </head>
 
   <body>
@@ -21,14 +21,14 @@
             class="primaryButton"
             onclick=" window.open('Easy.html', '_self');"
           >
-            Easy
+            <span> Easy </span>
           </button>
           <button
             type="Button"
             class="primaryButton"
             onclick=" window.open('Hard.html', '_self');"
           >
-            Hard
+            <span>Hard</span>
           </button>
         </div>
         <button
