changed key bindings from W,A,D to arrow keys

--- a/Easy.html
+++ b/Easy.html
@@ -12,6 +12,8 @@
     <div class="canvasContainer">
       <canvas id="myCanvas">
         <div class="js-score score"></div>
+        <h2>PLAYER HEALTH<span id="bonus-life">1</span></h2>
+        <progress id="player-health" max="100" value="100">100%</progress>
         <img
           src="/assets/Background-img.png"
           alt="star_background"
