created extra lives

--- a/Easy.html
+++ b/Easy.html
@@ -10,10 +10,10 @@
 
   <body>
     <div class="canvasContainer">
+      <p id="health-label"><span id="bonus-life">3</span></p>
       <canvas id="myCanvas">
         <div class="js-score score"></div>
-        <h2>PLAYER HEALTH<span id="bonus-life">1</span></h2>
-        <progress id="player-health" max="100" value="100">100%</progress>
+
         <img
           src="/assets/Background-img.png"
           alt="star_background"
