--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </button>
 
         <p class="p-small">How to play:</p>
-        <p class="p-small">"W, A, D" to move</p>
+        <p class="p-small">"Up, Left, Right" arrows to move</p>
         <p class="p-small">"Space" to shoot</p>
 
         <a href="./Credits.html" class="credits">Credits</a>
