--- a/Hard.html
+++ b/Hard.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <div class="canvasContainer">
+      <p id="health-label"><span id="bonus-life">3</span></p>
       <canvas id="myCanvas">
         <div class="js-score score"></div>
+
         <img
           src="/assets/Background-img.png"
           alt="star_background"
